app/assets/stylesheets/_events.css.scss
body.events-page {
  min-height: 100vh;
  .container-fluid.content {
    width: 100%;
    padding-left: 5px;
    padding-right: 5px;
    margin: 0px auto 0px auto;
  }

  .event_wrapper {  
    position: relative;
    overflow: hidden;
    height: 120px;
  }

  .likebutton {
    border: none;
    font-size: 40px;
    z-index: 2;
    position: absolute;
    top: 30px;
    left: 25%;
    background: transparent;
    span {
      color: mintcream;
    }
  }

  .row_events {
    border-top: 1px solid #ccc;
    padding-bottom: 0px;
    position: relative;
  }

  ul {
    list-style-type: none;
    padding-left: 0px;
    margin-top: 10px;
  }

  .event_header {
    font-size: 1em;
    font-weight: 700;
    // overflow: visible;
  }
  @media only screen and (max-width: 540px) {
    .event_header {
      font-size: 1em;
    }
  }

  .location {
    font-size: .70em;
    font-weight: 500;
  }

  .event_date {
    font-size: .70em;
    font-weight: 500;
  }

  .group_info {
    font-size: .70em;
    font-weight: 500;
  }

//align to top, float right. move star icon beneath
  .event_photo_index {
    height: 120px;
    min-width: 100%;
  }

  .event_photo_overlay {
    position: absolute;
    top: 0px;
    // background-color: rgba(0,0,0,0.7);
    height: 120px;
    width: 100%;
    background: -webkit-linear-gradient(left, white 2%, rgba(0,0,0,0.7) 98%); /* Safari 5.1-6.0 */
    background: -o-linear-gradient(left, white 2%, rgba(0,0,0,0.7) 98%); /* For Opera 11.6-12.0 */
    background: -moz-linear-gradient(left, white 2%, rgba(0,0,0,0.7) 98%); /* For Firefox 3.6-15 */
    background: linear-gradient(left, white 2%, rgba(0,0,0,0.7) 98%); /* Standard syntax */
  }

  .btn.btn-default {
    display: block;
    // width: auto;
    &:hover, &:active {
      background-color: darken(#f2ecd6, 20%);
      border-bottom: 2px solid darken(#ef5529, 20%);
    }
  }
}

.logo {
  display: inline-block;
}

.navbar-logo {
  height: 33px;
  padding: 5px 5px;
  margin-top: -12px;
}

// NEW NAV *****************

@mixin transition($transition-property, $transition-time, $method) {
    -webkit-transition: $transition-property $transition-time $method;
    -moz-transition: $transition-property $transition-time $method;
    -ms-transition: $transition-property $transition-time $method;
    -o-transition: $transition-property $transition-time $method;
    transition: $transition-property $transition-time $method;
}

@mixin transition-duration($transition-time) {
    -webkit-transition-duration: $transition-time;
    -moz-transition-duration: $transition-time;
    -ms-transition-duration: $transition-time;
    -o-transition-duration: $transition-time;
    transition-duration: $transition-time;
}

@mixin transform($transforms) {
     -moz-transform: $transforms;
       -o-transform: $transforms;
      -ms-transform: $transforms;
  -webkit-transform: $transforms;
          transform: $transforms;
}

/*  ==========================================================================
    CORE STYLES
    This should work just fine as long as you @include off-canvas-nav in your
    .nav-primary.
    ========================================================================== */
    
$off-canvas-width: 16rem;
$off-canvas-duration: .3s;
$canvas-offset: .5;

@mixin off-canvas-nav {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 2;
  overflow-y: auto;
  width: $off-canvas-width;
  @include transition(all, $off-canvas-duration, ease-in-out);
  @include transform(translateX(-$off-canvas-width));
  
  &.off-canvas-show {
    @include transform(translateX(0));
  }

  @media screen and (min-width: 768px) {
    position: static;
    display: block;
    margin: 0;
    padding: 0;
    width: 100%;
    @include transform(translateX(0));
  }
}

.page-content,
.mobile-helper-bar {
  float: right;
  width: 100%;
  @include transition(all, $off-canvas-duration, ease-in-out);
}

.off-canvas-show {
  ~ .page-content {
    overflow: hidden;
    @include transform(translateX($off-canvas-width*$canvas-offset));
  }
  ~ .mobile-helper-bar {
    overflow: hidden;
    @include transform(translateX($off-canvas-width));
  }
}

.mobile-helper-bar {
  background: rgba(30,30,30,1);
  position: fixed;
  z-index: 3;
  padding: .5rem 1rem;
  @media screen and (min-width: 768px) {
    display: none;
  }
  button { color: #fff; }
}

/*  ==========================================================================
    DEMO THEME
    These are just separated out to keep the core styles a little bit cleaner.
    ========================================================================== */

.nav-primary {

  background: #303030;
  @include off-canvas-nav;
  
  ul {
    text-align: left;
    padding-left: 0px;
    @media screen and (min-width: 768px) {
      text-align: center;
    }
  }
  
  li {
    display: block;
    padding: 1.5rem 2rem;
    line-height: 1;
    list-style: none;
    border-bottom: 1px solid #888888;
    @media screen and (min-width: 768px) {
      display: inline-block;
      padding: .25rem 2rem;
    }
  }
  
  a {
    color: #fcfcfc;
    text-decoration: none;
    padding: .5rem 0;
    display: block;
    font-weight: 100;
  }
  
}

.off-canvas-show {
  box-shadow: 0 0 5px #000;
}

.page-content {
  padding: 3rem 1rem;
  box-sizing: border-box;
  @media screen and (min-width: 768px) {
    padding: 3rem;
  }
}

.hamburger {
  background: transparent;
  font-size: 1.5rem;
  border: 0;
  outline: none;
  display: inline-block;
  padding: 0;
  margin: 0;
  margin-left: -25px;
  padding-top: 5px;
}

.hamburger-bar {
  background-color: white;
  width: 22px;
  height: 2px;
  margin: 4px 7px;
  &:last-of-type {
    margin-bottom: 0px; 
  }

}


.back-button {
  width: 15px;
  height: 15px;
  background-image: url('back-button.svg');
  background-size: contain;
  /*vertical-align: text-bottom;*/
  display: inline-block;
}

.page-title {
  color: white;
  font-size: 2rem;
  display: inline-block;
}

// END NAV*************

